Mitigate text contrast issue in list management #2357

--- a/src/html-pages/article-page/render-as-html/_article-actions.scss
+++ b/src/html-pages/article-page/render-as-html/_article-actions.scss
@@ -75,8 +75,6 @@
 
 .list-management {
   @include card.basics();
-
-  background-color: settings.$colour-highlighted-background;
 }
 
 .list-management__listed-in {
